Títulos e imagen para la noticia

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel ="icon" href="/proyecto-manmacfer/icons/favicon.png" type="image/png">
 </head>
 <body>
-
+    <h1>Calendario Marvel en 2022</h1>
+    <h2>¿Qué películas y series se estrenarán?</h2>
+    <img src="/proyecto-manmacfer/images/NMarvel2022.jpg" alt="Películas Marvel 2022" style="width: 500px;" />
 </body>
 </html>
