--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Manuel Machuca Fernánez">
+    <meta name="description" content="Página de noticias sobre cine.">
+    <meta name="robots" content="all">
+    <meta name="keywords" content="películas, noticias de películas, cine, noticias de cine">
     <title>Action!</title>
     <link rel ="icon" href="/proyecto-manmacfer/icons/favicon.png" type="image/png">
 </head>
