Primera entrega terminada

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="/proyecto-manmacfer/images/NMarvel2022.jpg" alt="Películas Marvel 2022" style="width: 500px;" />
     <p><b>Comienza un año muy prometedor para el Universo Cinematográfico de Marvel.<br>
         <small>2022 busca regresar poco a poco a la normalidad que Disney lleva buscando desde antes de la pandemia, una en la que los estrenos de películas se vean acompañados de series de forma recurrente para que estemos todo el año acompañados del UCM. Porque 2021 ha sido solo un calentamiento. Lo que tienen preparado para el año que ahora comienza es de vértigo, tanto en las salas de cine como en la comodidad del hogar en Disney+. Repasamos todas las películas y series del Universo Marvel con fecha confirmada para 2022.</small></b></p>
-    <p style="width: 550px; text-align: justify;"><u>Moon Knight <cite>(Caballero Luna)</cite></u> — <i>30 de marzo solo en Disney+ [Serie]</i><br>
+    <p><u>Moon Knight <cite>(Caballero Luna)</cite></u> — <i>30 de marzo solo en Disney+ [Serie]</i><br>
        <u>Doctor Strange en el Multiverso de la Locura</u> — <i>4 de mayo de 2022 en cines</i><br>
        <u>She-Hulk</u> — <i>Serie para Disney+ en 2022</i><br>
        <u>I am Groot</u> — <i>Serie de cortometrajes para Disney+ en 2022</i><br>
