--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 <body>
     <h1>Calendario Marvel en 2022</h1>
     <h2>¿Qué películas y series se estrenarán?</h2>
-    <img src="/proyecto-manmacfer/images/NMarvel2022.jpg" alt="Películas Marvel 2022" style="width: 500px;" />
+    <figure>
+        <picture>
+            <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
+            <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
+            <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
+        </picture>
+        <figcaption>Muestra de carteleras de las películas que se estrenarán.</figcaption>
+    </figure>
+
     <p><b>Comienza un año muy prometedor para el Universo Cinematográfico de Marvel.<br>
         <small>2022 busca regresar poco a poco a la normalidad que Disney lleva buscando desde antes de la pandemia, una en la que los estrenos de películas se vean acompañados de series de forma recurrente para que estemos todo el año acompañados del UCM. Porque 2021 ha sido solo un calentamiento. Lo que tienen preparado para el año que ahora comienza es de vértigo, tanto en las salas de cine como en la comodidad del hogar en Disney+. Repasamos todas las películas y series del Universo Marvel con fecha confirmada para 2022.</small></b></p>
     <p><u>Moon Knight <cite>(Caballero Luna)</cite></u> — <i>30 de marzo solo en Disney+ [Serie]</i><br>
