Añado las carpetas y archivos correspondientes

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
        <u>Secret Invasion</u> — <i>Serie para Disney+ en 2022</i><br>
        <u>Ms. Marvel</u> — <i>Serie para Disney+ en 2022</i><br>
        <u>The Guardians of the Galaxy Holiday Special</u> — <i>Episodio original para Disney+ en 2022</i></p>
+
+       <a href="./pag2.html">Pasar</a>
 </body>
 </html>
