--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <title>Action!</title>
     <link rel ="icon" href="/proyecto-manmacfer/icons/favicon.png" type="image/png">
 </head>
-<body>
-    <h1>Calendario Marvel en 2022</h1>
+<body style="text-align: center; margin: auto; background: #232323; color: #dbdbdb;">
+    <h1>¡Noticias de Cine!</h1>
+    
+    <picture>
+        <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
+        <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
+        <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
+    </picture>
+
     <h2>¿Qué películas y series se estrenarán?</h2>
     <figure>
         <picture>
@@ -25,15 +32,20 @@
 
     <p><b>Comienza un año muy prometedor para el Universo Cinematográfico de Marvel.<br>
         <small>2022 busca regresar poco a poco a la normalidad que Disney lleva buscando desde antes de la pandemia, una en la que los estrenos de películas se vean acompañados de series de forma recurrente para que estemos todo el año acompañados del UCM. Porque 2021 ha sido solo un calentamiento. Lo que tienen preparado para el año que ahora comienza es de vértigo, tanto en las salas de cine como en la comodidad del hogar en Disney+. Repasamos todas las películas y series del Universo Marvel con fecha confirmada para 2022.</small></b></p>
-    <p><u>Moon Knight <cite>(Caballero Luna)</cite></u> — <i>30 de marzo solo en Disney+ [Serie]</i><br>
-       <u>Doctor Strange en el Multiverso de la Locura</u> — <i>4 de mayo de 2022 en cines</i><br>
-       <u>She-Hulk</u> — <i>Serie para Disney+ en 2022</i><br>
-       <u>I am Groot</u> — <i>Serie de cortometrajes para Disney+ en 2022</i><br>
-       <u>Thor Love and Thunder</u> — <i>8 de julio de 2022 en cines</i><br>
-       <u>Black Panther 2: Wakanda Forever</u> — <i>11 de noviembre de 2022 en cines</i><br>
-       <u>Secret Invasion</u> — <i>Serie para Disney+ en 2022</i><br>
-       <u>Ms. Marvel</u> — <i>Serie para Disney+ en 2022</i><br>
-       <u>The Guardians of the Galaxy Holiday Special</u> — <i>Episodio original para Disney+ en 2022</i></p>
+
+    <h2>¿Qué películas y series se estrenarán?</h2>
+    <figure>
+        <picture>
+            <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
+            <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
+            <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
+        </picture>
+        <figcaption>Muestra de carteleras de las películas que se estrenarán.</figcaption>
+    </figure>
+
+    <p><b>Comienza un año muy prometedor para el Universo Cinematográfico de Marvel.<br>
+        <small>2022 busca regresar poco a poco a la normalidad que Disney lleva buscando desde antes de la pandemia, una en la que los estrenos de películas se vean acompañados de series de forma recurrente para que estemos todo el año acompañados del UCM. Porque 2021 ha sido solo un calentamiento. Lo que tienen preparado para el año que ahora comienza es de vértigo, tanto en las salas de cine como en la comodidad del hogar en Disney+. Repasamos todas las películas y series del Universo Marvel con fecha confirmada para 2022.</small></b></p>
+
 
        <a href="./pag2.html">Pasar</a>
 </body>
