Noticias puestas en el Inicio y links agregados

--- a/index.html
+++ b/index.html
@@ -10,43 +10,42 @@
     <meta name="keywords" content="películas, noticias de películas, cine, noticias de cine">
     <title>Action!</title>
     <link rel ="icon" href="/proyecto-manmacfer/icons/favicon.png" type="image/png">
+    <style>p {width: 670px; margin: 16px auto; text-align: justify;} a {color: #954fcc;}</style>
 </head>
 <body style="text-align: center; margin: auto; background: #232323; color: #dbdbdb;">
     <h1>¡Noticias de Cine!</h1>
-    
+
     <picture>
         <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
         <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
         <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
     </picture>
 
-    <h2>¿Qué películas y series se estrenarán?</h2>
+    <h2><a href="/proyecto-manmacfer/articles/article_1.html">Calendario Marvel en 2022</a></h2>
     <figure>
-        <picture>
+        <a href="/proyecto-manmacfer/articles/article_1.html"><picture>
             <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
             <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
             <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
-        </picture>
+        </picture></a>
         <figcaption>Muestra de carteleras de las películas que se estrenarán.</figcaption>
     </figure>
 
     <p><b>Comienza un año muy prometedor para el Universo Cinematográfico de Marvel.<br>
-        <small>2022 busca regresar poco a poco a la normalidad que Disney lleva buscando desde antes de la pandemia, una en la que los estrenos de películas se vean acompañados de series de forma recurrente para que estemos todo el año acompañados del UCM. Porque 2021 ha sido solo un calentamiento. Lo que tienen preparado para el año que ahora comienza es de vértigo, tanto en las salas de cine como en la comodidad del hogar en Disney+. Repasamos todas las películas y series del Universo Marvel con fecha confirmada para 2022.</small></b></p>
+        <small>2022 busca regresar poco a poco a la normalidad que Disney lleva buscando desde antes de la pandemia, una en la que los estrenos de películas se vean acompañados de series de forma recurrente para...</small><br>
+        <a href="/proyecto-manmacfer/articles/article_1.html">¡LEER MÁS!</a></b></p>
 
-    <h2>¿Qué películas y series se estrenarán?</h2>
+    <h2><a href="/proyecto-manmacfer/articles/article_2.html">Animales fantásticos 3: Los secretos de Dumbledore'</a></h2>
     <figure>
-        <picture>
+        <a href="/proyecto-manmacfer/articles/article_2.html"><picture>
             <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
             <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
             <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
-        </picture>
+        </picture></a>
         <figcaption>Muestra de carteleras de las películas que se estrenarán.</figcaption>
     </figure>
 
-    <p><b>Comienza un año muy prometedor para el Universo Cinematográfico de Marvel.<br>
-        <small>2022 busca regresar poco a poco a la normalidad que Disney lleva buscando desde antes de la pandemia, una en la que los estrenos de películas se vean acompañados de series de forma recurrente para que estemos todo el año acompañados del UCM. Porque 2021 ha sido solo un calentamiento. Lo que tienen preparado para el año que ahora comienza es de vértigo, tanto en las salas de cine como en la comodidad del hogar en Disney+. Repasamos todas las películas y series del Universo Marvel con fecha confirmada para 2022.</small></b></p>
-
-
-       <a href="./pag2.html">Pasar</a>
+    <p><b>'Animales fantásticos: Los secretos de Dumbledore' es el título de la tercera entrega de esta saga precuela de Harry Potter. Es también una película muy marcada por la precipitada salida de Johnny Depp de la misma cuando el rodaje, que llegó a su final en Reino Unido en febrero de 2021, ya había arrancado.<br>
+        <a href="/proyecto-manmacfer/articles/article_2.html">¡LEER MÁS!</a></b></p>
 </body>
 </html>
