--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <meta name="keywords" content="películas, noticias de películas, cine, noticias de cine">
     <title>Action!</title>
     <link rel ="icon" href="/proyecto-manmacfer/icons/favicon.png" type="image/png">
-    <style>p {width: 670px; margin: 16px auto; text-align: justify;} a {color: #954fcc;}</style>
+    <style>p {width: 670px; margin: 16px auto; text-align: justify;}</style>
 </head>
-<body style="text-align: center; margin: auto; background: #232323; color: #dbdbdb;">
+<body style="text-align: center; margin: auto;">
     <h1>¡Noticias de Cine!</h1>
 
     <picture>
-        <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
-        <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
-        <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
+        <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/imgindice_315.png">
+        <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/imgindice_800.png">
+        <img src="/proyecto-manmacfer/images/imgindice_315.png" alt="Películas Marvel 2022"/>
     </picture>
 
     <h2><a href="/proyecto-manmacfer/articles/article_1.html">Calendario Marvel en 2022</a></h2>
     <figure>
         <a href="/proyecto-manmacfer/articles/article_1.html"><picture>
-            <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
-            <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
-            <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
+            <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-315.png">
+            <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-650.png">
+            <img src="/proyecto-manmacfer/images/NMarvel2022-315.png" alt="Películas Marvel 2022"/>
         </picture></a>
         <figcaption>Muestra de carteleras de las películas que se estrenarán.</figcaption>
     </figure>
@@ -38,11 +38,11 @@
     <h2><a href="/proyecto-manmacfer/articles/article_2.html">Animales fantásticos 3: Los secretos de Dumbledore'</a></h2>
     <figure>
         <a href="/proyecto-manmacfer/articles/article_2.html"><picture>
-            <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NMarvel2022-500.jpg">
-            <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NMarvel2022-800.jpg">
-            <img src="/proyecto-manmacfer/images/NMarvel2022-800.jpg" alt="Películas Marvel 2022"/>
+            <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/NAF3_315.png">
+            <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/NAF3_650.png">
+            <img src="/proyecto-manmacfer/images/NAF3_315.png" alt="Animales Fantásticos 3"/>
         </picture></a>
-        <figcaption>Muestra de carteleras de las películas que se estrenarán.</figcaption>
+        <figcaption>Cartel de Animales Fantásticos 3</figcaption>
     </figure>
 
     <p><b>'Animales fantásticos: Los secretos de Dumbledore' es el título de la tercera entrega de esta saga precuela de Harry Potter. Es también una película muy marcada por la precipitada salida de Johnny Depp de la misma cuando el rodaje, que llegó a su final en Reino Unido en febrero de 2021, ya había arrancado.<br>
