Cambios en la estructura

--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
     <meta name="keywords" content="películas, noticias de películas, cine, noticias de cine">
     <title>Action!</title>
     <link rel ="icon" href="/proyecto-manmacfer/icons/favicon.png" type="image/png">
-    <style>p {width: 670px; margin: 16px auto; text-align: justify;}</style>
+    <link href="/proyecto-manmacfer/css/style.css" rel="stylesheet" type="text/css">
 </head>
-<body style="text-align: center; margin: auto;">
-    <h1>¡Noticias de Cine!</h1>
+<body>
+    <nav>
+        <a class="button" href="/proyecto-manmacfer/articles/article_1.html">Hipervículo</a>
+        <a class="button" href="/proyecto-manmacfer/articles/article_1.html">Hipervículo</a>
+        <a class="button" href="/proyecto-manmacfer/articles/article_1.html">Hipervículo</a>
+        <a class="button" href="/proyecto-manmacfer/articles/article_1.html">Hipervículo</a>
+        <a class="button" href="/proyecto-manmacfer/articles/article_1.html">Hipervículo</a>
+        <a class="button" href="/proyecto-manmacfer/articles/article_1.html">Hipervículo</a>
+        <a class="button" href="/proyecto-manmacfer/articles/article_1.html">Hipervículo</a>
+    </nav>
 
-    <picture>
-        <source media="(max-width: 499px)" srcset="/proyecto-manmacfer/images/imgindice_315.png">
-        <source media="(min-width: 500px)" srcset="/proyecto-manmacfer/images/imgindice_800.png">
-        <img src="/proyecto-manmacfer/images/imgindice_315.png" alt="Películas Marvel 2022"/>
-    </picture>
+    <header>
+        <div class="cabecera">¡Noticias de Cine!</div>
+    </header>
 
+    <main>
     <h2><a href="/proyecto-manmacfer/articles/article_1.html">Calendario Marvel en 2022</a></h2>
     <figure>
         <a href="/proyecto-manmacfer/articles/article_1.html"><picture>
@@ -47,5 +54,7 @@
 
     <p><b>'Animales fantásticos: Los secretos de Dumbledore' es el título de la tercera entrega de esta saga precuela de Harry Potter. Es también una película muy marcada por la precipitada salida de Johnny Depp de la misma cuando el rodaje, que llegó a su final en Reino Unido en febrero de 2021, ya había arrancado.<br>
         <a href="/proyecto-manmacfer/articles/article_2.html">¡LEER MÁS!</a></b></p>
+    
+    </main>
 </body>
 </html>
