--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <section class="accion">
             <a id="secaccion"></a>
-            <div id="category"><h1>Películas de Acción</h1></div>
+            <div class="category"><h1>Películas de Acción</h1></div>
 
             <article>
 
@@ -74,7 +74,7 @@
 
         <section class="fantasia">
             <a id="secfantasia"></a>
-            <div id="category"><h1>Películas de Fantasía</h1></div>
+            <div class="category"><h1>Películas de Fantasía</h1></div>
 
             <article>
 
@@ -120,7 +120,7 @@
 
         <section class="terror">
             <a id="secterror"></a>
-            <div id="category"><h1>Películas de Terror</h1></div>
+            <div class="category"><h1>Películas de Terror</h1></div>
 
             <article>
 
