--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="imgartc">
 
-                    <a href="/proyecto-manmacfer/articles/article_2.html"><picture>
+                    <a href="/proyecto-manmacfer/articles/article_1.html"><picture>
                         <source media="(max-width: 680px)" srcset="/proyecto-manmacfer/images/NMarvel2022-200.png">
                         <source media="(min-width: 681px)" srcset="/proyecto-manmacfer/images/NMarvel2022-390.png">
                         <img src="/proyecto-manmacfer/images/NMarvel2022-200.png" alt="Calendario Marvel en 2022"/>
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="desartc">
-                    <h2>Calendario Marvel en 2022</h2>
+                    <h2><a href="/proyecto-manmacfer/articles/article_1.html">Calendario Marvel en 2022</a></h2>
                 <div class="desc">Comienza un año muy prometedor para el Universo Cinematográfico de Marvel. 2022 busca regresar poco a poco a la normalidad que Disney lleva buscando desde antes de la pandemia, una en la que los estrenos de películas se vean acompañados de series de forma recurrente para...</div>
                 <a href="/proyecto-manmacfer/articles/article_1.html">¡LEER MÁS!</a>
                 </div>
@@ -63,9 +63,9 @@
                 </div>
 
                 <div class="desartc">
-                    <h2>The Batman será un éxito de taquilla asegurado</h2>
+                    <h2><a href="/proyecto-manmacfer/articles/article_2.html">The Batman será un éxito de taquilla asegurado</a></h2>
                 <div class="desc">Después de los tráilers y todo el material que está apareciendo online de The Batman, hay muchas ganas de poder ver la historia que ha preparado Matt Reeves que protagonizará Robert Pattinson. Además, unos experto analistas aseguran que no solo tendrá una gran recaudación, sino que superará a El Caballero Oscuro: La leyenda renace (2012) que hizo 160 millones en su primer fin de semana y a Batman v Superman: El amanecer de la justicia (2016) que obtuvo 166 millones...</div>
-                <a href="/proyecto-manmacfer/articles/article_1.html">¡LEER MÁS!</a>
+                <a href="/proyecto-manmacfer/articles/article_2.html">¡LEER MÁS!</a>
                 </div>
 
             </article>
@@ -80,7 +80,7 @@
 
                 <div class="imgartc">
 
-                    <a href="/proyecto-manmacfer/articles/article_2.html"><picture>
+                    <a href="/proyecto-manmacfer/articles/article_3.html"><picture>
                         <source media="(max-width: 680px)" srcset="/proyecto-manmacfer/images/NAF3_200.png">
                         <source media="(min-width: 681px)" srcset="/proyecto-manmacfer/images/NAF3_390.png">
                         <img src="/proyecto-manmacfer/images/NAF3_200.png" alt="Animales fantásticos 3: Los secretos de Dumbledore'"/>
@@ -89,9 +89,9 @@
                 </div>
 
                 <div class="desartc">
-                    <h2>Animales fantásticos 3: Los secretos de Dumbledore'</h2>
+                    <h2><a href="/proyecto-manmacfer/articles/article_3.html">Animales fantásticos 3: Los secretos de Dumbledore</a></h2>
                 <div class="desc">'Animales fantásticos: Los secretos de Dumbledore' es el título de la tercera entrega de esta saga precuela de Harry Potter. Es también una película muy marcada por la precipitada salida de Johnny Depp de la misma cuando el rodaje, que llegó a su final en Reino Unido en febrero de 2021, ya había arrancado...</div>
-                <a href="/proyecto-manmacfer/articles/article_1.html">¡LEER MÁS!</a>
+                <a href="/proyecto-manmacfer/articles/article_3.html">¡LEER MÁS!</a>
                 </div>
 
             </article>
@@ -100,7 +100,7 @@
 
                 <div class="imgartc">
 
-                    <a href="/proyecto-manmacfer/articles/article_2.html"><picture>
+                    <a href="/proyecto-manmacfer/articles/article_4.html"><picture>
                         <source media="(max-width: 680px)" srcset="/proyecto-manmacfer/images/Morbius-200.png">
                         <source media="(min-width: 681px)" srcset="/proyecto-manmacfer/images/Morbius-390.png">
                         <img src="/proyecto-manmacfer/images/Morbius-200.png" alt="Morbius"/>
@@ -109,9 +109,9 @@
                 </div>
 
                 <div class="desartc">
-                    <h2>Morbius, el antihéroe del universo Spider-man, está muy cerca</h2>
+                    <h2><a href="/proyecto-manmacfer/articles/article_4.html">Morbius, el antihéroe del universo Spider-man, está muy cerca</a></h2>
                 <div class="desc">Sony tiene los derechos de algunos personajes carismáticos de Marvel y los quiere aprovechar. Por eso, este 2022 llega a los cines con Morbius, la película sobre un oscuro antihéroe de los cómics con el que intenta repetir el éxito cosechado por Venom. Y para que seas un experto en el tema y llegues preparado, te contamos todo sobre la película Morbius (argumento, origen, actores, etc). Prepárate, porque otro personaje icónico de Spider-Man llega pronto...</div>
-                <a href="/proyecto-manmacfer/articles/article_1.html">¡LEER MÁS!</a>
+                <a href="/proyecto-manmacfer/articles/article_4.html">¡LEER MÁS!</a>
                 </div>
 
             </article>
@@ -126,7 +126,7 @@
 
                 <div class="imgartc">
 
-                    <a href="/proyecto-manmacfer/articles/article_2.html"><picture>
+                    <a href="/proyecto-manmacfer/articles/article_5.html"><picture>
                         <source media="(max-width: 680px)" srcset="/proyecto-manmacfer/images/Scream-200.png">
                         <source media="(min-width: 681px)" srcset="/proyecto-manmacfer/images/Scream-390.png">
                         <img src="/proyecto-manmacfer/images/Scream-200.png" alt="Crítica de ‘Scream’ (2022). Puñalada con gusto no duele"/>
@@ -135,9 +135,9 @@
                 </div>
 
                 <div class="desartc">
-                    <h2>Crítica de ‘Scream’ (2022). Puñalada con gusto no duele</h2>
+                    <h2><a href="/proyecto-manmacfer/articles/article_5.html">Crítica de ‘Scream’ (2022). Puñalada con gusto no duele</a></h2>
                 <div class="desc">Quizás va siendo el momento de reconocer, alto, claro y sin ningún tipo de pudor, que ‘Scream’ (Wes Craven, 1996) es la película barra joya del terror con las mejores y más dignas secuelas de la historia del cine. Esas que no necesitan ser reivindicadas un porrón de años más tarde por cuatro nostálgicos con ansia de sentirse especiales. Vamos, lo que sucede con: ‘La matanza de Texas 2’ (Tobe Hooper, 1986), ‘El exorcista III’ (William Peter Blatty, 1990) o ‘Halloween III (El día de la bruja)’ (Tommy Lee Wallace, 1982)...</div>
-                <a href="/proyecto-manmacfer/articles/article_1.html">¡LEER MÁS!</a>
+                <a href="/proyecto-manmacfer/articles/article_5.html">¡LEER MÁS!</a>
                 </div>
 
             </article>
@@ -146,7 +146,7 @@
 
                 <div class="imgartc">
 
-                    <a href="/proyecto-manmacfer/articles/article_2.html"><picture>
+                    <a href="/proyecto-manmacfer/articles/article_6.html"><picture>
                         <source media="(max-width: 680px)" srcset="/proyecto-manmacfer/images/HallEnds-200.png">
                         <source media="(min-width: 681px)" srcset="/proyecto-manmacfer/images/HallEnds-390.png">
                         <img src="/proyecto-manmacfer/images/HallEnds-200.png" alt="'Halloween Ends'"/>
@@ -155,15 +155,24 @@
                 </div>
 
                 <div class="desartc">
-                    <h2>'Halloween Ends' publica su primera imagen con las tres protagonistas</h2>
+                    <h2><a href="/proyecto-manmacfer/articles/article_6.html">'Halloween Ends' publica su primera imagen con las tres protagonistas</a></h2>
                 <div class="desc">'Halloween Ends' será la película que cierre la nueva trilogía de la saga de 'Halloween'. Unos meses después del estreno del estreno de su predecesora, 'Halloween Kills', conocemos algunos detalles más de la tercera entrega con la primera imagen del que será el trío protagonista: Jamie Lee Curtis (Laurie Strode), Kyle Richards (Lyndsey Wallace) y Andi Matichak (Allyson)...</div>
-                <a href="/proyecto-manmacfer/articles/article_1.html">¡LEER MÁS!</a>
+                <a href="/proyecto-manmacfer/articles/article_6.html">¡LEER MÁS!</a>
                 </div>
 
             </article>
             
         </section>
     
+        <footer>
+            <div class="footertext">
+                Alumno: Manuel Machuca Fernández<br>
+                Asignatura: Lenguajes de marcas<br>
+                Curso: 2021-2022
+            </div>
+        </footer>
+
     </main>
+
 </body>
 </html>
