--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a class="button" href="#secaccion">Acción</a>
         <a class="button" href="#secfantasia">Fantasía</a>
         <a class="button" href="#secterror">Terror</a>
+        <a class="button" href="/proyecto-manmacfer/articles/formulario.html">Formulario</a>
     </nav>
 
     <header>
